# sparkx-cpy

./: CMakeLists.txt  setup.py  test.py
include/: BinaryReader.h  ParticleData.h
src/: BinaryReader.cc  main.cc  pybinds.cc
